# microbiome-db

./: .gitignore  README.md  pyproject.toml
src/gmrepo/: build_abundance.py  build_metadata.py  config.py  download.py  main.py  parse.py  validate.py
src/microbiome_db/: main.py
src/microbiome_db/sources/: _common.py
src/microbiome_db/sources/cmd/: __init__.py  build.py  config.py  download.py  export.R  validate.py
src/microbiome_db/sources/gmrepo/: __init__.py  build_abundance.py  build_metadata.py  config.py  download.py  parse.py  validate.py
src/microbiome_db/sources/microbiomehd/: __init__.py  build.py  config.py  download.py  validate.py
src/microbiome_db/sources/qiita/: __init__.py  build.py  config.py  download.py  validate.py
