[project]
name = "microbiome-db"
version = "1.0.0"
description = "Multi-source microbiome abundance and metadata pipeline"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "pyarrow>=14.0",
    "requests>=2.31",
    "click>=8.1",
    "tqdm>=4.65",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]
qiita = ["redbiom>=0.3.0", "biom-format>=2.1.5"]

[project.scripts]
microbiome-db = "microbiome_db.main:cli"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
